feature section included...basic html and css only..doesnt look professional yet

--- a/index.html
+++ b/index.html
@@ -1,41 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" type="text/css" href="vendors/css/hardReset.css">
-    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+  <head>
+    <link rel="stylesheet" type="text/css" href="vendors/css/hardReset.css" />
+    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>Omnifood</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header>
-        <nav class="nav-panel">
-            <div class="navImg">
-                <img class="logo" src="resources/img/logo-white.png" alt="omnibook logo">
-            </div>
-            <ul class="nav-links">
-                <li><a href="#">Food Delivery</a></li>
-                <li><a href="#">How it works</a></li>
-                <li><a href="#">Our cities</a></li>
-                <li><a href="#">Sign up</a></li>
-            </ul>
-
-        </nav>
-        <section class="heroText">
-            <h1>Goodbye junk food.<br>Hello super healthy meals.</h1>
-            <a class="btn btn-main" href="#">I'm hungry</a>
-            <a class="btn btn-ghost" href="#">Show me more</a>
-        </section>
-
+      <nav class="nav-panel">
+        <div class="navImg">
+          <img
+            class="logo"
+            src="resources/img/logo-white.png"
+            alt="omnibook logo"
+          />
+        </div>
+        <ul class="nav-links">
+          <li><a href="#">Food Delivery</a></li>
+          <li><a href="#">How it works</a></li>
+          <li><a href="#">Our cities</a></li>
+          <li><a href="#">Sign up</a></li>
+        </ul>
+      </nav>
+      <section class="heroText">
+        <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
+        <a class="btn btn-main" href="#">I'm hungry</a>
+        <a class="btn btn-ghost" href="#">Show me more</a>
+      </section>
     </header>
 
-
+    <section class="row sec-features">
+      <div class="heading">
+        <h2>Get food fast &mdash; not fast food</h2>
+        <p>
+          Hello, we're Omnifood, your new premium food delivery service. We know
+          you're always busy. No time for cooking. So let us take care of that,
+          we're really good at it, we promise!
+        </p>
+      </div>
+      <div class="row features">
+        <div class="feature">
+          <ion-icon name="infinite-outline"></ion-icon>
+          <h3>UP TO 365 DAYS/YEAR</h3>
+          <p class="">
+            Never cook again! We really mean that. Our subscription plans
+            include up to 365 days/year coverage. You can also choose to order
+            more flexibly if that's your style.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon name="alarm-outline"></ion-icon>
+          <h3>READY IN 20 MINUTES</h3>
+          <p class="">
+            You're only twenty minutes away from your delicious and super
+            healthy meals delivered right to your home. We work with the best
+            chefs in each town to ensure that you're 100% happy.
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon name="leaf-outline"></ion-icon>
+          <h3>100% ORGANIC</h3>
+          <p class="">
+            All our vegetables are fresh, organic and local. Animals are raised
+            without added hormones or antibiotics. Good for your health, the
+            environment, and it also tastes better!
+          </p>
+        </div>
+        <div class="feature">
+          <ion-icon name="cart-outline"></ion-icon>
+          <h3>ORDER ANYTHING</h3>
+          <p class="">
+            We don't limit your creativity, which means you can order whatever
+            you feel like. You can also choose from our menu containing over 100
+            delicious meals. It's up to you!
+          </p>
+        </div>
+      </div>
+    </section>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="source/algo.js"></script>
-
-</body>
-
+  </body>
 </html>
