styled the feature section. added a css only element using :after. padding and margin and other styling used to pretiffy the features section.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
         <div class="feature">
           <ion-icon name="leaf-outline"></ion-icon>
-          <h3>100% ORGANIC</h3>
+          <h3 class="tempa">100% ORGANIC</h3>
           <p class="">
             All our vegetables are fresh, organic and local. Animals are raised
             without added hormones or antibiotics. Good for your health, the
@@ -75,7 +75,7 @@
         </div>
         <div class="feature">
           <ion-icon name="cart-outline"></ion-icon>
-          <h3>ORDER ANYTHING</h3>
+          <h3 class="tempa">ORDER ANYTHING</h3>
           <p class="">
             We don't limit your creativity, which means you can order whatever
             you feel like. You can also choose from our menu containing over 100
