gallery section added. html and css only.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <!---------------------Landing Page Logo Nav-bar----------------->
     <header>
       <nav class="nav-panel">
         <div class="navImg">
@@ -35,7 +36,7 @@
         <a class="btn btn-ghost" href="#">Show me more</a>
       </section>
     </header>
-
+    <!------------ features section ---------------->
     <section class="row sec-features">
       <div class="heading">
         <h2>Get food fast &mdash; not fast food</h2>
@@ -83,6 +84,74 @@
           </p>
         </div>
       </div>
+    </section>
+    <!----------------  images customers favourites ------------>
+    <section class="gallery">
+      <ul>
+        <li>
+          <figure>
+            <img
+              src="resources/img/1.jpg"
+              alt="Korean bibimbap with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="resources/img/2.jpg"
+              alt="Simple italian pizza with cherry tomatoes"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="resources/img/3.jpg"
+              alt="Chicken breast steak with vegetables "
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="resources/img/4.jpg" alt="Autumn pumpkin soup" />
+          </figure>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <figure>
+            <img
+              src="resources/img/5.jpg"
+              alt="Paleo beef steak with vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="resources/img/6.jpg"
+              alt="Healthy baguette with egg and vegetables"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="resources/img/7.jpg"
+              alt="Burger with cheddar and bacon"
+            />
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img
+              src="resources/img/8.jpg"
+              alt="Granola with cherries and strawberries"
+            />
+          </figure>
+        </li>
+      </ul>
     </section>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="source/algo.js"></script>
