halfway through the how it works section

--- a/index.html
+++ b/index.html
@@ -153,6 +153,39 @@
         </li>
       </ul>
     </section>
+    <!----------------- HOW IT WORKS --------------->
+    <section class="row how">
+      <div class="top">
+        <h2>How it works &dash; Simple as 1,2,3</h2>
+      </div>
+      <div class="left col col-1-of-2">
+        <img src="resources/img/app-iPhone.png" alt="omnifood in an iphone" />
+      </div>
+      <div class="right col col-1-of-2">
+        <div class="1">1</div>
+        <div class="step1">
+          <p>
+            Choose the subscription plan that best fits your needs and sign up
+            today.
+          </p>
+        </div>
+        <div class="2">2</div>
+        <div class="step2">
+          <p>
+            Order your delicious meal using our mobile app or website. Or you
+            can even call us!
+          </p>
+        </div>
+        <div class="3">3</div>
+        <div class="step3">
+          <p>
+            Enjoy your meal after less than 20 minutes. See you the next time!
+          </p>
+        </div>
+        <a href="#" class="applink"><img src="resources/img/download-app.svg"></a>
+        <a href="#" class="applink" ><img src="resources/img/download-app-android.png"></a>"</div>
+      </div>
+    </section>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="source/algo.js"></script>
   </body>
