cities section added. final touch needed though.

--- a/index.html
+++ b/index.html
@@ -1,198 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" type="text/css" href="vendors/css/hardReset.css" />
-    <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
-    <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
-      rel="stylesheet"
-    />
-    <title>Omnifood</title>
-    <meta charset="utf-8" />
-  </head>
 
-  <html>
-    <!---------------------Landing Page Logo Nav-bar----------------->
-    <header>
-      <nav class="nav-panel">
-        <div class="navImg">
-          <img
-            class="logo"
-            src="resources/img/logo-white.png"
-            alt="omnibook logo"
-          />
-        </div>
-        <ul class="nav-links">
-          <li><a href="#">Food Delivery</a></li>
-          <li><a href="#">How it works</a></li>
-          <li><a href="#">Our cities</a></li>
-          <li><a href="#">Sign up</a></li>
-        </ul>
-      </nav>
-      <section class="heroText">
-        <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
-        <a class="btn btn-main" href="#">I'm hungry</a>
-        <a class="btn btn-ghost" href="#">Show me more</a>
-      </section>
-    </header>
-    <!------------ features section ---------------->
-    <section class="row sec-features">
-      <div class="heading">
-        <h2>Get food fast &mdash; not fast food</h2>
-        <p>
-          Hello, we're Omnifood, your new premium food delivery service. We know
-          you're always busy. No time for cooking. So let us take care of that,
-          we're really good at it, we promise!
+<head>
+  <link rel="stylesheet" type="text/css" href="vendors/css/hardReset.css" />
+  <link rel="stylesheet" type="text/css" href="vendors/css/grid.css" />
+  <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet" />
+  <title>Omnifood</title>
+  <meta charset="utf-8" />
+</head>
+
+<html>
+<!---------------------Landing Page Logo Nav-bar----------------->
+<header>
+  <nav class="nav-panel">
+    <div class="navImg">
+      <img class="logo" src="resources/img/logo-white.png" alt="omnibook logo" />
+    </div>
+    <ul class="nav-links">
+      <li><a href="#">Food Delivery</a></li>
+      <li><a href="#">How it works</a></li>
+      <li><a href="#">Our cities</a></li>
+      <li><a href="#">Sign up</a></li>
+    </ul>
+  </nav>
+  <section class="heroText">
+    <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
+    <a class="btn btn-main" href="#">I'm hungry</a>
+    <a class="btn btn-ghost" href="#">Show me more</a>
+  </section>
+</header>
+<!------------ features section ---------------->
+<section class="row sec-features">
+  <div class="heading">
+    <h2>Get food fast &mdash; not fast food</h2>
+    <p>
+      Hello, we're Omnifood, your new premium food delivery service. We know
+      you're always busy. No time for cooking. So let us take care of that,
+      we're really good at it, we promise!
+    </p>
+  </div>
+  <div class="row features">
+    <div class="feature">
+      <ion-icon name="infinite-outline"></ion-icon>
+      <h3>UP TO 365 DAYS/YEAR</h3>
+      <p class="">
+        Never cook again! We really mean that. Our subscription plans
+        include up to 365 days/year coverage. You can also choose to order
+        more flexibly if that's your style.
+      </p>
+    </div>
+    <div class="feature">
+      <ion-icon name="alarm-outline"></ion-icon>
+      <h3>READY IN 20 MINUTES</h3>
+      <p class="">
+        You're only twenty minutes away from your delicious and super
+        healthy meals delivered right to your home. We work with the best
+        chefs in each town to ensure that you're 100% happy.
+      </p>
+    </div>
+    <div class="feature">
+      <ion-icon name="leaf-outline"></ion-icon>
+      <h3 class="tempa">100% ORGANIC</h3>
+      <p class="">
+        All our vegetables are fresh, organic and local. Animals are raised
+        without added hormones or antibiotics. Good for your health, the
+        environment, and it also tastes better!
+      </p>
+    </div>
+    <div class="feature">
+      <ion-icon name="cart-outline"></ion-icon>
+      <h3 class="tempa">ORDER ANYTHING</h3>
+      <p class="">
+        We don't limit your creativity, which means you can order whatever
+        you feel like. You can also choose from our menu containing over 100
+        delicious meals. It's up to you!
+      </p>
+    </div>
+  </div>
+</section>
+<!----------------  images customers favourites ------------>
+<section class="gallery clearfix">
+  <ul>
+    <li>
+      <figure>
+        <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables" />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes" />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables " />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/4.jpg" alt="Autumn pumpkin soup" />
+      </figure>
+    </li>
+  </ul>
+  <ul>
+    <li>
+      <figure>
+        <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables" />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables" />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon" />
+      </figure>
+    </li>
+    <li>
+      <figure>
+        <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries" />
+      </figure>
+    </li>
+  </ul>
+</section>
+<!----------------- HOW IT WORKS --------------->
+
+<section class="howitworks">
+  <div class="row how">
+    <div class="top">
+      <h2>How it works &dash; Simple as 1,2,3</h2>
+    </div>
+    <div class="left col col-1-of-2">
+      <img src="resources/img/app-iPhone.png" alt="omnifood in an iphone" />
+    </div>
+    <div class="right col col-1-of-2">
+      <div class="step step1">
+        <div class="num 1">1</div>
+        <p class="step-para">
+          Choose the subscription plan that best fits your needs and sign up
+          today.
         </p>
       </div>
-      <div class="row features">
-        <div class="feature">
-          <ion-icon name="infinite-outline"></ion-icon>
-          <h3>UP TO 365 DAYS/YEAR</h3>
-          <p class="">
-            Never cook again! We really mean that. Our subscription plans
-            include up to 365 days/year coverage. You can also choose to order
-            more flexibly if that's your style.
-          </p>
-        </div>
-        <div class="feature">
-          <ion-icon name="alarm-outline"></ion-icon>
-          <h3>READY IN 20 MINUTES</h3>
-          <p class="">
-            You're only twenty minutes away from your delicious and super
-            healthy meals delivered right to your home. We work with the best
-            chefs in each town to ensure that you're 100% happy.
-          </p>
-        </div>
-        <div class="feature">
-          <ion-icon name="leaf-outline"></ion-icon>
-          <h3 class="tempa">100% ORGANIC</h3>
-          <p class="">
-            All our vegetables are fresh, organic and local. Animals are raised
-            without added hormones or antibiotics. Good for your health, the
-            environment, and it also tastes better!
-          </p>
-        </div>
-        <div class="feature">
-          <ion-icon name="cart-outline"></ion-icon>
-          <h3 class="tempa">ORDER ANYTHING</h3>
-          <p class="">
-            We don't limit your creativity, which means you can order whatever
-            you feel like. You can also choose from our menu containing over 100
-            delicious meals. It's up to you!
-          </p>
-        </div>
-      </div>
-    </section>
-    <!----------------  images customers favourites ------------>
-    <section class="gallery clearfix">
-      <ul>
-        <li>
-          <figure>
-            <img
-              src="resources/img/1.jpg"
-              alt="Korean bibimbap with egg and vegetables"
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img
-              src="resources/img/2.jpg"
-              alt="Simple italian pizza with cherry tomatoes"
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img
-              src="resources/img/3.jpg"
-              alt="Chicken breast steak with vegetables "
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img src="resources/img/4.jpg" alt="Autumn pumpkin soup" />
-          </figure>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <figure>
-            <img
-              src="resources/img/5.jpg"
-              alt="Paleo beef steak with vegetables"
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img
-              src="resources/img/6.jpg"
-              alt="Healthy baguette with egg and vegetables"
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img
-              src="resources/img/7.jpg"
-              alt="Burger with cheddar and bacon"
-            />
-          </figure>
-        </li>
-        <li>
-          <figure>
-            <img
-              src="resources/img/8.jpg"
-              alt="Granola with cherries and strawberries"
-            />
-          </figure>
-        </li>
-      </ul>
-    </section>
-    <!----------------- HOW IT WORKS --------------->
 
-    <section class="howitworks">
-    <div class="row how">
-      <div class="top">
-        <h2>How it works &dash; Simple as 1,2,3</h2>
+      <div class="step step2">
+        <div class="num 2">2</div>
+        <p class="step-para">
+          Order your delicious meal using our mobile app or website. Or you
+          can even call us!
+        </p>
       </div>
-      <div class="left col col-1-of-2">
-        <img src="resources/img/app-iPhone.png" alt="omnifood in an iphone" />
+
+      <div class="step step3">
+        <div class="num 3">3</div>
+        <p class="step-para">
+          Enjoy your meal after less than 20 minutes. See you the next time!
+        </p>
       </div>
-      <div class="right col col-1-of-2">
-        <div class="step step1">
-          <div class="num 1">1</div>
-          <p class="step-para">
-            Choose the subscription plan that best fits your needs and sign up
-            today.
-          </p>
-        </div>
-        
-        <div class="step step2">
-          <div class="num 2">2</div>
-          <p class="step-para">
-            Order your delicious meal using our mobile app or website. Or you
-            can even call us!
-          </p>
-        </div>
-        
-        <div class="step step3">
-          <div class="num 3">3</div>
-          <p class="step-para">
-            Enjoy your meal after less than 20 minutes. See you the next time!
-          </p>
-        </div>
-        <div class="applinks">
-          <a href="#" class="applink"><img src="resources/img/download-app.svg"></a>
-          <a href="#" class="applink" ><img src="resources/img/download-app-android.png"></a>
-        </div>
+      <div class="applinks">
+        <a href="#" class="applink"><img src="resources/img/download-app.svg"></a>
+        <a href="#" class="applink"><img src="resources/img/download-app-android.png"></a>
       </div>
-    </section>
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script src="source/algo.js"></script>
-  </body>
+    </div>
+</section>
+
+<!-----------------------------cities--------------------------->
+<section class="sec-cities">
+  <div class="cities clearfix">
+    <h2 class="cities-heading">WE'RE CURRENTYLY IN THESE CITIES</h2>
+    <div class="city city1">
+      <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+      <div class="info">
+        <h3>Lisbon</h3>
+        <ul class="city-ul">
+          <li>
+            <ion-icon name="happy-outline"></ion-icon>1600+ happy eaters
+          </li>
+          <li>
+            <ion-icon name="fast-food-outline"></ion-icon>60+ top chefs
+          </li>
+          <li>
+            <ion-icon name="logo-twitter"></ion-icon><a href="#">@omnifood_lx</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="city city2">
+      <img src="resources/img/san-francisco.jpg" alt="San Francisco">
+      <div class="info">
+        <h3>San Francisco</h3>
+        <ul class="city-ul">
+          <li>
+            <ion-icon name="happy-outline"></ion-icon>3700+ happy eaters
+          </li>
+          <li>
+            <ion-icon name="fast-food-outline"></ion-icon>160+ top chefs
+          </li>
+          <li>
+            <ion-icon name="logo-twitter"></ion-icon><a href="#">@omnifood_sf</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="city city3">
+      <img src="resources/img/berlin.jpg" alt="Berlin">
+      <div class="info">
+        <h3>Berlin</h3>
+        <ul class="city-ul">
+          <li>
+            <ion-icon name="happy-outline"></ion-icon>2300+ happy eaters
+          </li>
+          <li>
+            <ion-icon name="fast-food-outline"></ion-icon>110+ top chefs
+          </li>
+          <li>
+            <ion-icon name="logo-twitter"></ion-icon><a href="#">@omnifood_berlin</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="city city4">
+      <img src="resources/img/london.jpg" alt="London">
+      <div class="info">
+        <h3>London</h3>
+        <ul class="city-ul">
+          <li>
+            <ion-icon name="happy-outline"></ion-icon>1200+ happy eaters
+          </li>
+          <li>
+            <ion-icon name="fast-food-outline"></ion-icon>50+ top chefs
+          </li>
+          <li>
+            <ion-icon name="logo-twitter"></ion-icon><a href="#">@omnifood_london</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+<script src="source/algo.js"></script>
+</body>
+
 </html>
