--- a/index.html
+++ b/index.html
@@ -249,20 +249,76 @@
   <div class="tests clearfix">
     <h2>Our Customers can't live without us</h2>
     <div class="test test1">
-      <blockquote>Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!</blockquote>
-      <cite><img src="resources/img/customer-1.jpg" alt="">Alberto Duncan</cite>
+      <blockquote>Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so
+        Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!</blockquote>
+      <cite><img src="resources/img/customer-1.jpg" alt="customer-1">Alberto Duncan</cite>
     </div>
     <div class="test test2">
-      <blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!</blockquote>
-      <cite><img src="resources/img/customer-2.jpg" alt="">Joana Silva</cite>
+      <blockquote>Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food
+        delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!</blockquote>
+      <cite><img src="resources/img/customer-2.jpg" alt="customer-2">Joana Silva</cite>
     </div>
     <div class="test test3">
-      <blockquote>I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!</blockquote>
-      <cite><img src="resources/img/customer-3.jpg" alt="">Milton Chapman</cite>
+      <blockquote>I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and
+        ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!</blockquote>
+      <cite><img src="resources/img/customer-3.jpg" alt="customer-3">Milton Chapman</cite>
     </div>
   </div>
 </section>
 
+<section class="sec-signup">
+  <h2 class="head-signup">START EATING HEALTHY TODAY</h2>
+  <div class="col-1-of-3">
+    <div class="price">
+      <h3>PREMIUM</h3>
+      <h3>$399/month</h3>
+      <p>That's only 13.30$ per meal</p>
+    </div>
+    <div class="features">
+      <ul class="">
+        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+      </ul>
+    </div>
+    <div class="button">sign up now</div>
+  </div>
+  
+  <div class="col-1-of-3">
+    <div class="price">
+      <h3>PRO</h3>
+      <h3>$149/month</h3>
+      <p>That's only 14.90$ per meal</p>
+    </div>
+    <div class="features">
+      <ul class="">
+        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+      </ul>
+    </div>
+    <div class="button">sign up now</div>
+  </div>
+  <div class="col-1-of-3">
+    <div class="price">
+      <h3>STARTER</h3>
+      <h3>$19 /meal</h3>
+      <p><br></p>
+    </div>
+    <div class="features">
+      <ul class="">
+        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
+        <li><ion-icon name="close-outline"></ion-icon></li>
+        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+      </ul>
+    </div>
+    <div class="button">Sign up now</div>
+  </div>
+  </div>
+</section>
 
 
 
