signup section complete.

--- a/index.html
+++ b/index.html
@@ -239,11 +239,9 @@
       </div>
     </div>
   </div>
-
-
-
-
 </section>
+
+<!--------------------------testimonials--------------------------->
 
 <section class="sec-testimonials">
   <div class="tests clearfix">
@@ -266,58 +264,63 @@
   </div>
 </section>
 
-<section class="sec-signup">
-  <h2 class="head-signup">START EATING HEALTHY TODAY</h2>
-  <div class="col-1-of-3">
-    <div class="price">
-      <h3>PREMIUM</h3>
-      <h3>$399/month</h3>
-      <p>That's only 13.30$ per meal</p>
+
+<!--------------------------sign up--------------------------->
+
+<section class="sec-signup clearfix">
+  <div class="sign">
+    <h2 class="sign-head">START EATING HEALTHY TODAY</h2>
+    <div class="col-1-of-3">
+      <div class="sign-price">
+        <h3 class="a">PREMIUM</h3>
+        <h3 class="b">$399 <span>/month</span></h3>
+        <p class="c">That's only 13.30$ per meal</p>
+      </div>
+      <div class="sign-features">
+        <ul class="">
+          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+        </ul>
+      </div>
+      <a class="btn btn-main" href="#">sign up now</a>
     </div>
-    <div class="features">
-      <ul class="">
-        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
-      </ul>
+    
+    <div class="col-1-of-3">
+      <div class="sign-price">
+        <h3 class="a">PRO</h3>
+        <h3 class="b">$149<span>/month</span></h3>
+        <p class="c">That's only 14.90$ per meal</p>
+      </div>
+      <div class="sign-features">
+        <ul class="">
+          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+        </ul>
+      </div>
+      <a class="btn btn-ghost" href="#">sign up now</a>
     </div>
-    <div class="button">sign up now</div>
-  </div>
+    <div class="col-1-of-3">
+      <div class="sign-price">
+        <h3 class="a">STARTER</h3>
+        <h3 class="b">$19 <span>/meal</span></h3>
+        <p class="c">That's 19.00$ per meal</p>
+      </div>
+      <div class="sign-features">
+        <ul class="">
+          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
+          <li><ion-icon name="close-outline"></ion-icon></li>
+          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+        </ul>
+      </div>
+      <a class="btn btn-ghost" href="#">Sign up now</a>
+    </div>
+    </div>
   
-  <div class="col-1-of-3">
-    <div class="price">
-      <h3>PRO</h3>
-      <h3>$149/month</h3>
-      <p>That's only 14.90$ per meal</p>
-    </div>
-    <div class="features">
-      <ul class="">
-        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
-      </ul>
-    </div>
-    <div class="button">sign up now</div>
-  </div>
-  <div class="col-1-of-3">
-    <div class="price">
-      <h3>STARTER</h3>
-      <h3>$19 /meal</h3>
-      <p><br></p>
-    </div>
-    <div class="features">
-      <ul class="">
-        <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
-        <li><ion-icon name="close-outline"></ion-icon></li>
-        <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
-      </ul>
-    </div>
-    <div class="button">Sign up now</div>
-  </div>
-  </div>
 </section>
 
 
