form section added

--- a/index.html
+++ b/index.html
@@ -278,15 +278,23 @@
       </div>
       <div class="sign-features">
         <ul class="">
-          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal every day</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>1 meal every day
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Order 24/7
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Access to newest creations
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Free delivery
+          </li>
         </ul>
       </div>
       <a class="btn btn-main" href="#">sign up now</a>
     </div>
-    
+
     <div class="col-1-of-3">
       <div class="sign-price">
         <h3 class="a">PRO</h3>
@@ -295,10 +303,18 @@
       </div>
       <div class="sign-features">
         <ul class="">
-          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Order 24/7</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Access to newest creations</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>1 meal 10 days/month
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Order 24/7
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Access to newest creations
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Free delivery
+          </li>
         </ul>
       </div>
       <a class="btn btn-ghost" href="#">sign up now</a>
@@ -311,19 +327,95 @@
       </div>
       <div class="sign-features">
         <ul class="">
-          <li><ion-icon name="checkmark-outline"></ion-icon>1 meal</li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm</li>
-          <li><ion-icon name="close-outline"></ion-icon></li>
-          <li><ion-icon name="checkmark-outline"></ion-icon>Free delivery</li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>1 meal
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Order from 8 am to 12 pm
+          </li>
+          <li>
+            <ion-icon name="close-outline"></ion-icon>
+          </li>
+          <li>
+            <ion-icon name="checkmark-outline"></ion-icon>Free delivery
+          </li>
         </ul>
       </div>
       <a class="btn btn-ghost" href="#">Sign up now</a>
     </div>
-    </div>
-  
+  </div>
 </section>
 
 
+
+
+<!--------------------------form--------------------------->
+
+
+
+<section class="sec-form">
+  <div class="form row">
+    <h2 class="form-head">we are happy to hear from you</h2>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="name">Name</label>
+      </div>
+      <div class="form-right">
+        <input type="text" name="name" id="name" placeholder="Your name" required>
+      </div>
+    </div>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="email">Email</label>
+      </div>
+      <div class="form-right">
+        <input type="text" id="email" name="email" placeholder="Your email">
+      </div>
+    </div>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="find">How did you find us?</label>
+      </div>
+      <div class="form-right">
+        <select name="find" id="find">
+          <option value="Friends">Friends</option>
+          <option value="Search Engine">Search Engine</option>
+          <option value="Advertisement">Advertisement</option>
+          <option value="Other">Other</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="news">Newsletter?</label>
+      </div>
+      <div class="form-right">
+        <input type="checkbox" name="news" id="news" checked> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Yes, Please
+      </div>
+    </div>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="drop">Drop us a line</label>
+      </div>
+      <div class="form-right">
+        <textarea name="drop" id="drop" cols="80" rows="8" placeholder="Your Message"></textarea>
+      </div>
+    </div>
+    <div class="form-unit clearfix">
+      <div class="form-left">
+        <label for="submit">&nbsp;</label>
+      </div>
+      <div class="form-right">
+        <input type="submit" value="Press me"></input>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+<!--------------------------form--------------------------->
 
 
 
