--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
           </li>
         </ul>
       </div>
-      <a class="btn btn-main" href="#">sign up now</a>
+      <a class="btn btn-ghost" href="#">sign up now</a>
     </div>
 
     <div class="col-1-of-3">
@@ -415,8 +415,31 @@
 
 
 
-<!--------------------------form--------------------------->
-
+<!--------------------------footer--------------------------->
+<section class="sec-foot">
+  <div class="div-foot row clearfix">
+    <div class="foot foot1 clearfix">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">iOS App</a></li>
+        <li><a href="#">Android App</a></li>
+      </ul>
+    </div>
+    <div class="foot foot2 clearfix">
+      <ul>
+        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-google"></ion-icon></a></li>
+        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
+      </ul>
+    </div>
+    <div class="foot foot3">
+      Copyright &copy; 2021 Omnifood Global Inc. All Rights Reserved.
+    </div>
+  </div>
+</section>
 
 
 
