buttons embedded  with the corresponding links

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
       <img class="logo" src="resources/img/logo-white.png" alt="omnibook logo" />
     </div>
     <ul class="nav-links">
-      <li><a href="#">Food Delivery</a></li>
-      <li><a href="#">How it works</a></li>
-      <li><a href="#">Our cities</a></li>
-      <li><a href="#">Sign up</a></li>
+      <li><a href="#sec-features">Food Delivery</a></li>
+      <li><a href="#howitworks">How it works</a></li>
+      <li><a href="#sec-cities">Our cities</a></li>
+      <li><a href="#sec-signup">Sign up</a></li>
     </ul>
   </nav>
   <section class="heroText">
     <h1>Goodbye junk food.<br />Hello super healthy meals.</h1>
-    <a class="btn btn-main" href="#">I'm hungry</a>
-    <a class="btn btn-ghost" href="#">Show me more</a>
+    <a class="btn btn-main" href="#sec-signup">I'm hungry</a>
+    <a class="btn btn-ghost" href="#sec-cities">Show me more</a>
   </section>
 </header>
 <!------------ features section ---------------->
-<section class="row sec-features">
+<section class="row sec-features" id="sec-features">
   <div class="heading">
     <h2>Get food fast &mdash; not fast food</h2>
     <p>
@@ -130,7 +130,7 @@
 </section>
 <!----------------- HOW IT WORKS --------------->
 
-<section class="howitworks">
+<section class="howitworks" id="howitworks" >
   <div class="row how">
     <div class="top">
       <h2>How it works &dash; Simple as 1,2,3</h2>
@@ -169,7 +169,7 @@
 </section>
 
 <!-----------------------------cities--------------------------->
-<section class="sec-cities">
+<section class="sec-cities" id="sec-cities">
   <div class="cities clearfix">
     <h2 class="cities-heading">WE'RE CURRENTYLY IN THESE CITIES</h2>
     <div class="city city1">
@@ -269,7 +269,7 @@
 
 <!--------------------------sign up--------------------------->
 
-<section class="sec-signup clearfix">
+<section class="sec-signup clearfix" id="sec-signup">
   <div class="sign">
     <h2 class="sign-head">START EATING HEALTHY TODAY</h2>
     <div class="col-1-of-3">
@@ -439,7 +439,11 @@
     </div>
     <div class="foot foot3">
       Copyright &copy; 2021 Omnifood Global Inc. All Rights Reserved.
+      <div class='myself'>
+        <div class='name'>Suraj Singh Raman</div>
+      </div>
     </div>
+    
   </div>
 </section>
 
